--- a/Supply Chain Management.html
+++ b/Supply Chain Management.html
@@ -81,8 +81,10 @@
                             <a href="Management Services.html" class="dropdown-item">Management Services & Technologies</a>
                             <a href="Sales.html" class="dropdown-item">Sales</a>
                             <a href="Accounts.html" class="dropdown-item">Accounts</a>
+                            <a href="Compliance and Governance.html" class="dropdown-item">Compliance and Governance</a>
                             <a href="Marketing.html" class="dropdown-item">Marketing & Communications</a>
                             <a href="Supply Chain Management.html" class="dropdown-item">Supply Chain Management</a>
+                            <a href="Customer Services.html" class="dropdown-item">Customer Services</a>
                         </div>
                     </div>
                     <div class="nav-item dropdown">
