--- a/Management Services.html
+++ b/Management Services.html
@@ -152,7 +152,7 @@
                         
                         <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/11BePX2GDmy7hrUPiZHZi_Fty7bi0Nr95?usp=sharing" target="_blank"><i class="fa fa-angle-right mr-2"></i>Hridoy</a>
                         <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1i7K6sOjSIVfFIOGW2IB1dhJ-GLSSQuCD?usp=sharing" target="_blank"><i class="fa fa-angle-right mr-2"></i>Farjana</a>
-                        <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1n1qndJpuQ6E_kjOjcNOTY2sI-anA4cOH?usp=sharing" target="_blank"><i class="fa fa-angle-right mr-2"></i>Ritesh</a>
+                        <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1kZ_7-uZ-CM6UNP1av6L7xDDh5DzFvNwF?usp=drive_link" target="_blank"><i class="fa fa-angle-right mr-2"></i>Ruhul Amin</a>
                     </div>
                 </div>
                 <div class="col-sm-6 mb-5">
