--- a/Marketing.html
+++ b/Marketing.html
@@ -147,6 +147,7 @@
                         <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1gaMSz_pG95vN602ne1vqjwYP3UgctzHd?usp=share_link" target="_blank"><i class="fa fa-angle-right mr-2"></i>Marketing & Communications Internal Sharing</a>
                         <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/10usEMsiJz36ZQZLyEuHu8CQoYMH9Plku?usp=sharing" target="_blank"><i class="fa fa-angle-right mr-2"></i>Tushar</a>
                         <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1IP7RDt5p6ozkuV0Junk-3PzUmrQZ8uIP?usp=share_link" target="_blank"><i class="fa fa-angle-right mr-2"></i>Zarah</a>
+                        <a class="text-white-50 mb-2" href="https://drive.google.com/drive/" target="_blank"><i class="fa fa-angle-right mr-2"></i>Tanzim Ahmed</a>
                         
                     </div>
                 </div>
