--- a/SOPs.html
+++ b/SOPs.html
@@ -140,6 +140,7 @@
 <br><br>
 <br><br>
     <!-- Footer Start -->
+
     
     <div class="container-fluid bg-dark text-light border-top py-4" style="border-color: rgba(256, 256, 256, .15) !important;">
         <div class="container">
@@ -149,6 +150,12 @@
                     <a href="#" class="navbar-brand">
                         <h1 class="mb-3 text-white"  style="font-size: 25px ;"><span class="text-primary"> All </span > <br> SOPs</h1>
                     </a>
+			<div class="d-flex flex-column justify-content-start">
+                        <a class="text-white-50 mb-2" href="https://drive.google.com/file/d/13szsA3liSRJbQIFbzG2h8DMOFbAyvFAI/view?usp=sharing" target="_blank"><i class="fa fa-angle-right mr-2"></i>SOPs (English)</a>
+                        <a class="text-white-50 mb-2" href="https://drive.google.com/file/d/1-cOS0FpmZeyBteNS-bRvxdZfXa3Th2xw/view?usp=sharing" target="_blank"><i class="fa fa-angle-right mr-2"></i>SOPs (Bangla)</a>
+                        <a class="text-white-50 mb-2" href="#" target="_blank"><i class="fa fa-angle-right mr-2"></i>Company Profile</a>
+                    </div>
+                </div>
                     <div class="d-flex flex-column justify-content-start">
                         <a class="text-white-50 mb-2" href="#" target="_blank"><i class="fa fa-angle-right mr-2"></i>SOPs For Retail Team</a>
                         <a class="text-white-50 mb-2" href="#" target="_blank"><i class="fa fa-angle-right mr-2"></i>SOPs For Design Team</a>
