--- a/Management Services.html
+++ b/Management Services.html
@@ -148,11 +148,11 @@
                     <div class="d-flex flex-column justify-content-start">
                         <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1KbMLQcCgKs45HZaVyH0Rxh4Ah81MHsq1?usp=share_link" target="_blank"><i class="fa fa-angle-right mr-2"></i>Management Services Internal Sharing</a>
                         <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/10kkh4FIPKCmJ0o0FjzfJXS_tvennIsFj?usp=share_link" target="_blank"><i class="fa fa-angle-right mr-2"></i>Meheli Ali</a>
-                        <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1xNjZACkj24HtSrPwKUWado4z-vs0WEEl?usp=sharing" target="_blank"><i class="fa fa-angle-right mr-2"></i>Humaira</a>
+                        <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1kZ_7-uZ-CM6UNP1av6L7xDDh5DzFvNwF?usp=drive_link" target="_blank"><i class="fa fa-angle-right mr-2"></i>Ruhul Amin</a>
                         
                         <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/11BePX2GDmy7hrUPiZHZi_Fty7bi0Nr95?usp=sharing" target="_blank"><i class="fa fa-angle-right mr-2"></i>Hridoy</a>
                         <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1i7K6sOjSIVfFIOGW2IB1dhJ-GLSSQuCD?usp=sharing" target="_blank"><i class="fa fa-angle-right mr-2"></i>Farjana</a>
-                        <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1kZ_7-uZ-CM6UNP1av6L7xDDh5DzFvNwF?usp=drive_link" target="_blank"><i class="fa fa-angle-right mr-2"></i>Ruhul Amin</a>
+                        <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1Ph9umt5Hk5MSIIPOALz7jrzuB7wd-6bw?usp=sharing" target="_blank"><i class="fa fa-angle-right mr-2"></i>Tuhin</a>
                     </div>
                 </div>
                 <div class="col-sm-6 mb-5">
