--- a/Management.html
+++ b/Management.html
@@ -78,7 +78,8 @@
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Department</a>
                         <div class="dropdown-menu rounded-0 m-0">
                             <!-- <a href="Management.html" class="dropdown-item">Management</a> -->
-                            <a href="Management Services.html" class="dropdown-item">Management Services & Technologies</a>
+                            <a href="Management Services.html" class="dropdown-item">Management Services</a>
+                             <a href="Management Services.html" class="dropdown-item">Technologies</a>
                             <a href="Sales.html" class="dropdown-item">Sales</a>
                             <a href="Accounts.html" class="dropdown-item">Accounts</a>
                             <a href="Compliance and Governance.html" class="dropdown-item">Compliance and Governance</a>
