--- a/Management Services.html
+++ b/Management Services.html
@@ -140,7 +140,7 @@
     
     <div class="container-fluid bg-dark text-light border-top py-4" style="border-color: rgba(256, 256, 256, .15) !important;">
         <div class="container">
-            <h1 style="color: white ;">Management Services & Technologies</h1> <br> <br>
+            <h1 style="color: white ;">Management Services</h1> <br> <br>
             <div class="row">
                 <div class="col-sm-6 mb-5">
                     <a href="#" class="navbar-brand">
