--- a/Design Studio.html
+++ b/Design Studio.html
@@ -79,7 +79,7 @@
                         <div class="dropdown-menu rounded-0 m-0">
                             <!-- <a href="Management.html" class="dropdown-item">Management</a> -->
                             <a href="Management Services.html" class="dropdown-item">Management Services</a>
-                            <a href="Management Services.html" class="dropdown-item">Technologies</a>
+                            <a href="Technologies.html" class="dropdown-item">Technologies</a>
                             <a href="Sales.html" class="dropdown-item">Sales</a>
                             <a href="Accounts.html" class="dropdown-item">Accounts</a>
                             <a href="Compliance and Governance.html" class="dropdown-item">Compliance and Governance</a>
