--- a/Technologies.html
+++ b/Technologies.html
@@ -148,15 +148,15 @@
                     </a>
                     <div class="d-flex flex-column justify-content-start">
                         <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1ZJR4JGTIeiJXC0FJWH4syeHkwRMHq-Ai?usp=share_link"><i class="fa fa-angle-right mr-2"></i>Technologies Internal Sharing</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Muneeza Asaf</a>
-                        <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1q2tf4EE9t9FhuMqZg7oBus4b9VIcMqqK?usp=share_link"><i class="fa fa-angle-right mr-2"></i>Mehreen Asaf</a>
+                        <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1kZ_7-uZ-CM6UNP1av6L7xDDh5DzFvNwF?usp=drive_link" target="_blank"><i class="fa fa-angle-right mr-2"></i>Ruhul Amin</a>
+                        <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1Ph9umt5Hk5MSIIPOALz7jrzuB7wd-6bw?usp=sharing" target="_blank"><i class="fa fa-angle-right mr-2"></i>Tuhin</a>
                         
                         
                     </div>
                 </div>
                 <div class="col-sm-6 mb-5">
                     <a href="#" class="navbar-brand">
-                        <h1 class="mb-3 text-white"  style="font-size: 25px ;"><span class="text-primary"> Send</span > By Muneeza Asaf</h1>
+                        <h1 class="mb-3 text-white"  style="font-size: 25px ;"><span class="text-primary"> Send</span > Technologies</h1>
                     </a>
                     <div class="d-flex flex-column justify-content-start">
                         <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>To Accounts</a>
@@ -169,7 +169,7 @@
                 </div>
                 <div class="col-sm-6 mb-5">
                     <a href="#" class="navbar-brand">
-                        <h1 class="mb-3 text-white"  style="font-size: 25px ;"><span class="text-primary"> Send</span > By Mehreen Asaf</h1>
+                        <h1 class="mb-3 text-white"  style="font-size: 25px ;"><span class="text-primary"> Send</span > By Technologies</h1>
                     </a>
                     <div class="d-flex flex-column justify-content-start">
                         <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/1M16tJ-wQrQIpcq070kYaClTmSK1OduLr?usp=share_link"><i class="fa fa-angle-right mr-2"></i>To Accounts</a>
