--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                         </div>
                     </div>
       
-                    <a href="https://drive.google.com/drive/folders/1DWkBAbVkn-UzfT6M8_4RPJhopJ_YviQx?usp=share_link" target="_blank"  class="nav-item nav-link">Digital Library</a>
+                    <a href="https://renaissancedecor-my.sharepoint.com/:f:/r/personal/admin_rdl_com_bd/Documents/Depatment/Digital%20Library?csf=1&web=1&e=OhyiMV" target="_blank"  class="nav-item nav-link">Digital Library</a>
                     <a href="https://drive.google.com/drive/folders/1tVUtPg-YJ3tuHPZ9yqojpsRY2P-b2MG2?usp=sharing" target="_blank"  class="nav-item nav-link">RDL Share Folder</a>
                     <a href="About RDL.html" target=""  class="nav-item nav-link">About RDL</a>
                     <a href="https://mail.google.com/chat" target="_blank"  class="nav-item nav-link">Chat</a>
