--- a/About RDL.html
+++ b/About RDL.html
@@ -89,9 +89,9 @@
                         </div>
                     </div>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Google Form</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Microsoft Form</a>
                         <div class="dropdown-menu rounded-0 m-0">
-                            <a href="https://forms.gle/uzmRpznw1fmerAwg8" target="_blank" class="dropdown-item">Attendance Form</a>
+                            <a href="https://forms.office.com/r/MTecfJVnx5" target="_blank" class="dropdown-item">Attendance Form</a>
                             <a href="https://forms.gle/y72AdGxJMwNJKibo6" target="_blank" class="dropdown-item">Leave Request Form(Logistics & Housekeeping)</a>
                             <a href="https://forms.gle/1o5j6wk4mhnBcSjE6" target="_blank" class="dropdown-item">Client FeedBack Form</a>
                             <a href="https://forms.gle/EqjjoE8L3FMdB8tj9" target="_blank" class="dropdown-item">Early Leave Management Form</a>
