--- a/About RDL.html
+++ b/About RDL.html
@@ -158,7 +158,7 @@
                     </a>
                     </a>
                     <div class="d-flex flex-column justify-content-start">
-                        <a class="text-white-50 mb-2" href="https://drive.google.com/drive/folders/18_A8Az9NIz8LZ1MMTU-2k5aqHmFrhHu2?usp=sharing" target="_blank"><i class="fa fa-angle-right mr-2"></i>Operational SOPs</a>
+                        <a class="text-white-50 mb-2" href="https://renaissancedecor-my.sharepoint.com/:f:/g/personal/ruhul_amin_rdl_com_bd/EvGIoRzIJ-lIgw-LU4GJW4MBe9ja0zM2pekikLB6TDEfOw?e=ADZsUy" target="_blank"><i class="fa fa-angle-right mr-2"></i>Operational SOPs</a>
                                       
                     </div>
                                     
